# ai-code-eval-harness

./: .gitignore  README.md  pyproject.toml
examples/: batch_manifest.json
problems/dependency_order/: README.md  solution.py  starter.py
problems/dependency_order/tests/: test_solution.py
problems/normalize_event/: README.md  solution.py  starter.py
problems/normalize_event/tests/: test_solution.py
problems/two_sum/: README.md  solution.py  starter.py
problems/two_sum/tests/: test_solution.py
src/eval_harness/: __init__.py  cli.py  runner.py
submissions/: two_sum_buggy.py
tests/: test_runner.py
