[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-eval-harness"
version = "0.1.0"
description = "A small Python tool for testing coding problem submissions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Saina Kakkar" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
eval-harness = "eval_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
